@startuml

title __MODEL's Class Diagram__\n

  namespace ru.training.karaf.converter {
    class ru.training.karaf.converter.CapabilityConverter {
    }
  }


  namespace ru.training.karaf.converter {
    class ru.training.karaf.converter.JsonbCapabilityConverter {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.CapabilityImpl {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.ClimateParameterDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.LocationDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.MeasuringDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.SensorDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.SensorTypeDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.UnitDO {
    }
  }


  namespace ru.training.karaf.model {
    class ru.training.karaf.model.UserDO {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.ClimateParameterRepo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.LocationRepo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.Repo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.SensorRepo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.SensorTypeRepo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.UniqueValidationRepoImpl {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.UnitRepo {
    }
  }


  namespace ru.training.karaf.repo {
    class ru.training.karaf.repo.UserRepo {
    }
  }


  namespace ru.training.karaf.serializer {
    class ru.training.karaf.serializer.SetOfEntitiesSerializer {
    }
  }


  ru.training.karaf.converter.CapabilityConverter .up.|> javax.persistence.AttributeConverter
  ru.training.karaf.converter.JsonbCapabilityConverter .up.|> javax.persistence.AttributeConverter
  ru.training.karaf.model.CapabilityImpl .up.|> java.io.Serializable
  ru.training.karaf.model.CapabilityImpl .up.|> ru.training.karaf.model.Capability
  ru.training.karaf.model.ClimateParameterDO .up.|> ru.training.karaf.model.ClimateParameter
  ru.training.karaf.model.LocationDO .up.|> ru.training.karaf.model.Location
  ru.training.karaf.model.MeasuringDO .up.|> ru.training.karaf.model.Measuring
  ru.training.karaf.model.MeasuringDO o-- ru.training.karaf.model.ClimateParameterDO : parameter
  ru.training.karaf.model.MeasuringDO o-- ru.training.karaf.model.SensorDO : sensor
  ru.training.karaf.model.SensorDO .up.|> ru.training.karaf.model.Sensor
  ru.training.karaf.model.SensorDO o-- ru.training.karaf.model.LocationDO : location
  ru.training.karaf.model.SensorDO o-- ru.training.karaf.model.SensorTypeDO : type
  ru.training.karaf.model.SensorTypeDO .up.|> ru.training.karaf.model.SensorType
  ru.training.karaf.model.SensorTypeDO o-- ru.training.karaf.model.CapabilityImpl : capability
  ru.training.karaf.model.UnitDO .up.|> ru.training.karaf.model.Unit
  ru.training.karaf.model.UserDO .up.|> ru.training.karaf.model.User
  ru.training.karaf.repo.ClimateParameterRepo .up.|> ru.training.karaf.repo.ClimateParameterRepo
  ru.training.karaf.repo.LocationRepo .up.|> ru.training.karaf.repo.LocationRepo
  ru.training.karaf.repo.SensorTypeRepo .up.|> ru.training.karaf.repo.SensorTypeRepo
  ru.training.karaf.repo.UniqueValidationRepoImpl .up.|> ru.training.karaf.repo.UniqueValidationRepo
  ru.training.karaf.repo.UnitRepo .up.|> ru.training.karaf.repo.UnitRepo
  ru.training.karaf.repo.UserRepo .up.|> ru.training.karaf.repo.UserRepo
  ru.training.karaf.serializer.SetOfEntitiesSerializer -up-|> com.fasterxml.jackson.databind.ser.std.StdSerializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
